[package]
name = "ardurust"
version = "0.1.0"
authors = ["Karen <karenl.harper88@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["staticlib"]

[profile.release]
codegen-units = 1
lto = true
opt-level = "z"
panic = "abort"

[dependencies]
